--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "author": "luis murillo",
   "license": "ISC",
@@ -14,6 +14,8 @@
     "express": "^4.16.3",
     "mongoose": "^5.2.8",
     "jwt-simple": "^0.5.1",
-    "moment": "^2.16.0"
+    "moment": "^2.16.0",
+    "crypto": "0.0.3",
+    "bcrypt-nodejs": "0.0.3"
   }
 }
